--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="bower_components/reveal.js/css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="bower_components/reveal.js/css/theme/league.css" id="theme">
+        <link rel="stylesheet" href="custom.css">
+
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="bower_components/reveal.js/lib/css/zenburn.css">
@@ -44,31 +46,100 @@
 					<h2>Coastal Insite</h2>
 					<h1>The Future</h1>
 					<p class="fragment">
-						<small>Hello, I'm Zach<br><br>
-                            <!-- <a href="mailto:zach.moreno@coastal.ca.gov">Zach.Moreno@coastal.ca.gov</a> / <a href="https://plus.google.com/u/0/+ZachariahMoreno1">+ZachariahMoreno1</a> /
-                            <a href="http://twitter.com/xachmoreno">@XachMoreno</a> -->
-                        </small>
+						<small>Hello, I'm Zach</small>
 					</p>
 				</section>
+
 
 				<section>
                     <section>
     					<h2>Coastal Insite?</h2>
 
-    					<p class="fragment">
-    						Empowering Coastal Creatives<br>to share information<br><span class="fragment">&amp; learn new skills</span>
-    					</p>
+    					<h3 class="fragment" style="margin-top:80px;">
+    						Empowering Coastal Creatives<br>to share information<br><span class="fragment">&amp; <strong>learn from each other</strong></span>
+    					</h3>
                     </section>
 
                     <section data-background="images/today.png">
-                        <h2 class="fragment" style="margin-top:-150px;">Today's Insite...</h2>
+                        <h2 class="fragment" style="margin-top:-150px;">Today's Insite</h2>
+                    </section>
+
+                    <section data-background="images/opposites.png">
+                        <h2 class="fragment" style="margin-top:-70px;">Are Coastal Insite &amp; www.coastal different?</h2>
+
+                        <small style="margin-top:100px;">quick aside</small>
+
+                        <h1 class="fragment" style="margin-top:200px;">Yes</h1>
                     </section>
 				</section>
 
 
+                <section>
+                    <section data-background="images/sharecare.jpg">
+                        <h1 style="margin-top:0px">Sharing is Caring</h1>
+                        <br><br><br>
+                        <h2 class="fragment">...if you know the people you work with</h2>
+                    </section>
+
+                    <section>
+                        <h2><small>enter:</small><br><span class="fragment">Insite Staff Directory</span></h2>
+                        <br><br>
+                        <p class="fragment">This again??</p>
+                        <br><br>
+                        <h2 class="fragment">Yes <span class="fragment">&amp; you're in it</span></h2>
+                    </section>
+
+                    <section data-background="images/directory.png">
+                    </section>
+
+                    <section data-background="images/directory_1.png">
+                    </section>
+
+                    <section data-background="images/directory_2.png">
+                    </section>
+
+                    <section data-background="images/directory-single.png">
+                    </section>
+
+                    <section data-background="images/directory-single_2.png">
+                    </section>
+				</section>
+
+
+                <section>
+                    <section data-background="images/siskaoct2014.jpg">
+                        <h1 style="margin-top:0px">Learning from Each Other<br><br>
+
+                            <span class="fragment">How?</span>
+                        </h1>
+                    </section>
+
+                    <section>
+                        <h2>By empowering you to create &amp; distribute <strong>more</strong> educational content for your coworkers</h2>
+
+                        <br>
+                        <p class="fragment">We already do this today,<br>but its not a holistic solution</p>
+                    </section>
+
+                    <section data-background="images/directory.png">
+                    </section>
+
+                    <section data-background="images/directory_1.png">
+                    </section>
+
+                    <section data-background="images/directory_2.png">
+                    </section>
+
+                    <section data-background="images/directory-single.png">
+                    </section>
+
+                    <section data-background="images/directory-single_2.png">
+                    </section>
+				</section>
+
 
 				<section style="text-align: left;">
-					<h1>THE END</h1>
+					<h1>The End</h1>
 
                     <small>Thanks!<br><br>
                         <a href="mailto:zach.moreno@coastal.ca.gov">Zach.Moreno@coastal.ca.gov</a> <br> <a href="https://plus.google.com/u/0/+ZachariahMoreno1">+ZachariahMoreno1</a> <br>
